# ndcsv

./: .gitignore  .pre-commit-config.yaml  .travis.yml  HOW_TO_RELEASE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  smoke_test.py
.github/workflows/: docs.yml  pytest-minimal.yml  pytest.yml
ci/: .coveragerc  requirements-conda-forge.yml  requirements-docs.yml  requirements-flake8.yml  requirements-latest.yml  requirements-minimal.yml  requirements-py36.yml  requirements-upstream.yml  requirements.yml
doc/: Makefile  api.rst  conf.py  dataloss.rst  develop.rst  format.rst  index.rst  installing.rst  requirements.yml  whats-new.rst
ndcsv/: __init__.py  proper_unstack.py  read.py  write.py
ndcsv/tests/: test_io.py  test_pandas.py  test_precision.py  test_proper_unstack.py  test_read.py  test_roundtrip.py  test_write.py
