[metadata]
name = ndcsv
author = Guido Imperiale
author_email = crusaderky@gmail.com
license = Apache
description =
    Store N-dimensional labelled arrays from xarray or pandas into human-readable CSV
    files and read them back without needing any configuration, load hints, or sidecar
    configuration files.
description_content_type=text/plain
keywords = CSV, pandas, xarray
url = https://github.com/crusaderky/ndcsv
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = ndcsv
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.7
install_requires =
    setuptools  # For pkg_resources
    numpy >= 1.14
    pandas >= 0.24
    pshell >= 1.0
    xarray >= 0.14
setup_requires = setuptools_scm

[options.package_data]
ndcsv =
    py.typed
    tests/data/*

[bdist_wheel]
universal = 1

[wheel]
universal = 1

[tool:pytest]
addopts = --strict
python_files = test_*.py
testpaths = ndcsv/tests

[flake8]
# https://github.com/python/black#line-length
max-line-length = 88
# E203: PEP8-compliant slice operators
#       https://github.com/python/black#slices
# W503: Allow for breaks before binary operator (Knuth's convention) - see
#       https://www.python.org/dev/peps/pep-0008/#should-a-line-break-before-or-after-a-binary-operator
ignore = E203, W503
exclude =
  .eggs
  doc/

[isort]
default_section = THIRDPARTY
known_first_party = ndcsv
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[mypy-*]
ignore_missing_imports = True
